--- a/pages/comunidad.html
+++ b/pages/comunidad.html
@@ -8,8 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="author" content="Consultora Enlazar">
     <meta name="description" content="Consultora Enlazar - Sumate a nuestra comunidad">
-    <meta name="keywords" content=" Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral, ">
+    <meta name="keywords"
+        content=" Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral, ">
     <title>Comunidad - Consultora Enlazar</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FDTGJRDSN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-4FDTGJRDSN');
+    </script>
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../assets/images/favicon/apple-icon-60x60.png">
@@ -181,12 +191,12 @@
                     Cursos y capacitaciones
                 </li>
             </ul>
-            <img class="avioncito-mobile d-none"
-                src="../assets/images/avioncito-estatico.png" alt="Avion volando">
+            <img class="avioncito-mobile d-none" src="../assets/images/avioncito-estatico.png" alt="Avion volando">
             <a href="https://t.me/joinchat/e8dtvJ5XB2k1MGIx" target="_blank"
                 class="button-card btn btn-ser-parte">¡quiero
                 ser parte!</a>
-            <img  data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="plane-desktop reveal-plane" src="../assets/images/avioncito.gif" alt="Avion volando">
+            <img data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="plane-desktop reveal-plane"
+                src="../assets/images/avioncito.gif" alt="Avion volando">
         </div>
     </section>
 
