--- a/pages/cursos-talleres.html
+++ b/pages/cursos-talleres.html
@@ -6,8 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Cursos y Talleres de Consultora Enlazar para empresas e individuos">
-    <meta name="keywords" content=" Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral, ">
+    <meta name="keywords"
+        content=" Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral, ">
     <title>Cursos y talleres - Consultora Enlazar</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FDTGJRDSN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-4FDTGJRDSN');
+    </script>
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../assets/images/favicon/apple-icon-60x60.png">
@@ -122,7 +132,7 @@
             <div class="d-flex justify-content-center col-md-4 col-lg-3 pb-lg-5 pb-5">
                 <!-- Inicio de CARD Webinars & Workshops gratuitos-->
                 <div class="card-webinars card text-center" style="width: 18rem;">
-                   <i>Gratis</i>
+                    <i>Gratis</i>
                     <img src="../assets/images/curso-webinars-gratis.webp" class="card-image card-img-top"
                         alt="Cursos gratuitos">
                     <div class="card-body body-card__one-line">
@@ -420,7 +430,8 @@
                         <input type="hidden" name="_subject" value="Curso:  Webinars & Workshops">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -675,7 +686,8 @@
                         <input type="hidden" name="_subject" value="Curso: Introducción a la selección de personal">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -719,7 +731,8 @@
                         <input type="hidden" name="_subject" value="Curso: Selección de personal profesional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -866,7 +879,8 @@
                         <input type="hidden" name="_subject" value="Curso: Selección de personal IT">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1141,7 +1155,8 @@
                         <input type="hidden" name="_subject" value="Curso: Coaching Introducción y práctica">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1185,7 +1200,8 @@
                         <input type="hidden" name="_subject" value="Curso: Coaching especializado">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1311,7 +1327,8 @@
                         <input type="hidden" name="_subject" value="Curso: Orientación vocacional & Ocupacional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1445,7 +1462,8 @@
                         <input type="hidden" name="_subject" value="Curso: Metodologías ágiles">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1583,7 +1601,8 @@
                         <input type="hidden" name="_subject" value="Curso: Inserción laboral & Perfil profesional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1842,7 +1861,8 @@
                         <input type="hidden" name="_subject" value="Curso: Asistente de Recursos Humanos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -1885,7 +1905,8 @@
                         <input type="hidden" name="_subject" value="Curso: Recursos Humanos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2021,7 +2042,8 @@
                         <input type="hidden" name="_subject" value="Curso: Liderazgo & Gestión de equipos">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2157,7 +2179,8 @@
                         <input type="hidden" name="_subject" value="Curso: Inteligencia emocional">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
@@ -2297,7 +2320,8 @@
                         <input type="hidden" name="_subject" value="Curso: PNL Programación neurolingüística">
                         <input type="hidden" name="_template" value="box">
                         <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
+                        <input type="hidden" name="_next"
+                            value="https://consultoraenlazar.com.ar/pages/cursos-talleres.html">
                     </form>
                 </div>
             </div>
