--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -174,6 +174,17 @@
                                 </p>
                             </div>
                         </div>
+                         <!-- Profesional 3 -->
+                         <div class="col-8 col-lg-4">
+                            <div class="text-center card-person">
+                                <img class="card-person__img-other"
+                                    src="../assets/images/Diana_Paolini_Mortada.webp"
+                                    alt="Diana Paoloni Mortada">
+                                <h4 class="card-person__title">DIANA PAOLINI MORTADA</h4>
+                                <p>Lic. y Prof. en Psicología UNLP con formación teórica y práctica en Orientación Vocacional Ocupacional
+                                </p>
+                            </div>
+                        </div>
                         <!-- Profesional 2 -->
                         <div class="col-8 col-lg-4">
                             <div class="text-center card-person">
