mobile add Diana

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -335,6 +335,25 @@
                         <div class="col-11 col-lg-4">
                             <div class="text-center card-person">
                                 <img class="card-person__img-other"
+                                    src="../assets/images/Diana_Paolini_Mortada.webp"
+                                    alt="Diana Paoloni Mortada">
+                                <h4 class="text-center card-person__title">DIANA PAOLINI MORTADA</h4>
+                                <p>Lic. y Prof. en Psicología UNLP con formación teórica y práctica en Orientación Vocacional Ocupacional</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide d-flex flex-column">
+                    <div class="row other-team__title-mobile">
+                        <div class="col-12">
+                            <h2 class="other-team__title">Profesionales</h2>
+                        </div>
+                    </div>
+                    <div class="row container justify-content-evenly">
+                        <!-- Profesional 2 -->
+                        <div class="col-11 col-lg-4">
+                            <div class="text-center card-person">
+                                <img class="card-person__img-other"
                                     src="../assets/images/equipo-matias-garcia-bielicki.webp"
                                     alt="Matias Garcia Bielicki">
                                 <h4 class="text-center card-person__title">MATÍAS GARCÍA BIELICKI</h4>
