email consultora add

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -545,7 +545,7 @@
                 <div class="modal-body__trabaja-nosotros">
                     <form onsubmit="return submitForm(this);"
                         class="modal-body__form d-flex flex-column align-items-center"
-                        action="https://formsubmit.co/tinchoz8426@gmail.com" method="POST"
+                        action="https://formsubmit.co/consultora.enlazar@gmail.com" method="POST"
                         enctype="multipart/form-data">
                         <div class="input-div__name-tel d-flex justify-content-between my-3 w-100">
                             <input class="input__name" type="text" name="Nombre y Apellido"
