--- a/pages/cursos-talleres.html
+++ b/pages/cursos-talleres.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <img src="../assets/images/logo-enlazar.svg" alt="" width="200" height="50">
+                <img src="../assets/images/Logo-Enlazar-fin-de-año-100x50px.gif" alt="Logo" width="100" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
