--- a/pages/particulares.html
+++ b/pages/particulares.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <img src="../assets/images/logo-enlazar.svg" alt="Logo" width="200" height="50">
+                <img src="../assets/images/logo-enlazar-web.png" alt="Logo" width="200" height="35">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
