--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -137,9 +137,9 @@
         <img class="subheader-image" src="../assets/images/flecha-doble.svg" alt="Flecha doble">
     </section>
 
-    <!-- Seccion de CARDS de cursos y talleres -->
-    <!-- Los MODALS los ubicamos en la linea 351 -->
+    <!-- Seccion de CARDS de cursos y capacitaciones -->
     <section class="section-cards__container container-fluid">
+        <h3 class="text-center fw-bold mb-5">Todo lo que vas a encontrar:</h2>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -214,6 +214,7 @@
             </div>
             <div class="swiper-pagination"></div>
         </div>
+        <p class="text-center fw-bold pt-5">Actualizamos el contenido y brindamos más cursos cada año.</p>
     </section>
 
     <!-- FOOTER -->
